# annoy-your-coworkers

./: .zshrc  Makefile  README.md  pyproject.toml
src/annoy_your_coworkers/: cli.py  config.py  matcher.py
src/annoy_your_coworkers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
