[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "annoy-your-coworkers"
version = "0.1.0"
description = "Play audio files when terminal commands complete"
requires-python = ">=3.9"

[project.scripts]
annoy = "annoy_your_coworkers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
